--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,31 +1,28 @@
-version: '3.1'
+version: '3.3'
 
 services:
-
-  wordpress:
-    image: wordpress
-    restart: always
-    ports:
-      - 8080:80
-    environment:
-      WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_USER: exampleuser
-      WORDPRESS_DB_PASSWORD: examplepass
-      WORDPRESS_DB_NAME: exampledb
+  jazz_townsville_wp:
+    depends_on:
+      - db
+    image: wordpress:latest
     volumes:
-      - wordpress:/var/www/html
-
+      - ./jazz_townsville:/var/www/html
+    ports:
+      - "8080:80"
+    restart: always
+    environment:
+      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
   db:
     image: mariadb:latest
+    volumes:
+      - db_data:/var/lib/mysql
     restart: always
     environment:
-      MYSQL_DATABASE: exampledb
-      MYSQL_USER: exampleuser
-      MYSQL_PASSWORD: examplepass
-      MYSQL_RANDOM_ROOT_PASSWORD: '1'
-    volumes:
-      - db:/var/lib/mysql
-
+      MYSQL_ROOT_PASSWORD: somewordpress
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
 volumes:
-  wordpress:
-  db:
+  db_data:
